# event-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  book.toml  build.rs  config-postgres.toml  config.toml  docker-compose.yml  package-lock.json  package.json
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml  rust.yml
configs/: config-pgmq.toml  config-postgres.toml  config.toml  minimal-config.toml
loadtest/: Cargo.toml
loadtest/src/: main.rs
migrations/: V1__create_initial_schema.sql  V1__initial_schema.sql  V2__add_events_table.sql
scripts/: add_routing_rules.sh  add_topic_validations.sh  create-next-tag.sh  send_test_events.sh  setup_database.sh
site/: custom.css
site/src/: SUMMARY.md  api.md  architecture.md  configuration.md  contributing.md  delivery-semantics.md  deployment.md  first-event.md  introduction.md  operations.md  publishers.md  quick-start.md  reference.md  release.md  routing.md  troubleshooting.md  validation.md
site/src/publishers/: kafka.md  mqtt.md  pgmq.md
src/: configuration.rs  main.rs  project_summary.md
src/gateway/: gateway.rs  metered.rs  mod.rs
src/http/: mod.rs
src/model/: event.rs  expressions.rs  mod.rs  routing.rs  topic.rs
src/publisher/: kafka_publisher.rs  mod.rs  mqtt_publisher.rs  pgmq_publisher.rs  publisher.rs
src/router/: router.rs
src/store/: cached_postgres_storage.rs  file_storage.rs  migrations.rs  mod.rs  postgres_storage.rs  storage.rs
src/ui/: mod.rs
ui/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/app/: layout.tsx
ui/src/components/: layout.tsx
ui/src/components/routing-rules/: condition-builder.tsx  condition-display.tsx  condition-text-display.tsx  rule-dialog.tsx
ui/src/components/topic-validations/: validation-dialog.tsx
ui/src/components/ui/: badge.tsx  collapsible.tsx  use-toast.ts
ui/src/hooks/: use-toast.ts
ui/src/pages/: dashboard.tsx  events.tsx  playground.tsx  routing-rules.tsx  topic-validations.tsx
ui/src/services/: api.ts  events.ts  routing-rules.ts  topic-validations.ts
ui/src/types/: common.ts  events.ts
